# eshop-actix

./: .env  Cargo.toml  README.md
.trae/rules/: git-commit-message.md
.trae/skills/code-standard/: SKILL.md
.trae/skills/crud-cache/: SKILL.md
src/: db.rs  error.rs  main.rs
src/api/: inventory.rs  mod.rs  product.rs  response.rs
src/cache/: mod.rs
src/dto/: inventory.rs  product.rs
src/middleware/: error_handler.rs  logger.rs  mod.rs  trace.rs
src/models/: inventory.rs  product.rs
src/repository/: inventory.rs  mod.rs  product.rs
src/service/: inventory.rs  inventory_cache.rs  mod.rs  product.rs  product_cache.rs
