[package]
name = "eshop-actix"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
env_logger = "0.11"
log = "0.4"
sqlx = { version = "0.7", features = ["runtime-async-std-native-tls", "mysql", "chrono"] }
tokio = { version = "1", features = ["rt", "macros", "time"] }
serde_json = "1"
dotenvy = "0.15"   # 可选，用于加载 .env 文件
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
dashmap = "6"
futures = "0.3"
bytes = "1"
socket2 = { version = "0.5", features = ["all"] }